--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>MRJOKER x Pikachu</title>
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      direction: rtl;
+      margin: 0; padding: 0; height: 100%; direction: rtl;
       font-family: 'Arial', sans-serif;
       overflow: hidden;
     }
@@ -49,38 +46,49 @@
       z-index: 2;
     }
     @keyframes spin {
-      0% { transform: rotateY(0deg);}
-      100% { transform: rotateY(360deg);}
+      0% { transform: rotateY(0deg); }
+      100% { transform: rotateY(360deg); }
     }
     @keyframes float {
-      0%,100% { transform: translateY(0);}
-      50% { transform: translateY(-30px);}
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-30px); }
     }
     .buttons {
-      margin-top: 40px;
+      margin-top: 20px;
       display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-between;
+      width: 90vw;
+      max-width: 800px;
+      align-items: center;
       z-index: 2;
     }
     button {
-      padding: 16px 32px;
-      font-size: 22px;
-      background: linear-gradient(45deg, cyan, magenta);
+      flex: 0 1 320px;
+      padding: 22px 60px;
+      font-size: 30px;
+      background: linear-gradient(135deg, #00ffff, #ff00ff);
       color: black;
-      font-weight: bold;
-      border: none;
-      border-radius: 12px;
+      font-weight: 900;
+      border: 3px solid #ff00ff;
+      border-radius: 20px;
       cursor: pointer;
-      box-shadow: 0 0 15px cyan;
-      transition: all 0.3s ease;
+      box-shadow:
+        0 0 20px #00ffff,
+        0 0 40px #ff00ff,
+        0 0 60px #ff00ff;
+      transition: all 0.4s cubic-bezier(.77,0,.18,1);
       user-select: none;
+      text-transform: uppercase;
+      letter-spacing: 2px;
     }
     button:hover {
-      background: white;
-      color: black;
-      transform: scale(1.1);
+      background: linear-gradient(135deg, #ff00ff, #00ffff);
+      color: white;
+      box-shadow:
+        0 0 30px #ff00ff,
+        0 0 60px #00ffff,
+        0 0 80px #00ffff;
+      transform: scale(1.15) rotate(-2deg);
     }
     .dialogue-container {
       position: fixed;
@@ -159,7 +167,7 @@
       text-align: center;
       user-select: none;
       position: fixed;
-      left: 50%;
+      left: 50%; /* חזרה למרכז */
       bottom: 40%;
       transform: translate(-50%, 50%);
       z-index: 11;
@@ -190,8 +198,10 @@
         padding: 20px 16px;
       }
       button {
-        font-size: 18px;
-        padding: 12px 24px;
+        font-size: 22px;
+        padding: 16px 28px;
+        width: 100%;
+        max-width: 100%;
       }
       .trainer-img {
         width: 70px;
@@ -200,11 +210,22 @@
       #salePage {
         font-size: 1em;
         padding: 20px;
+        left: 50%; /* חזרה למרכז במובייל */
         bottom: 40%;
         transform: translate(-50%, 50%);
       }
       .dialogue-container {
         max-width: 98vw;
+        bottom: 30px;
+      }
+      .buttons {
+        margin-top: 20px;
+        flex-direction: column;
+        gap: 30px;
+        width: 98vw;
+        max-width: 100vw;
+        justify-content: flex-start;
+        align-items: stretch;
       }
     }
   </style>
@@ -322,4 +343,3 @@
   </script>
 </body>
 </html>
-
